--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
-    <title>کارت ویزیت هوشمند آرمین</title>
+    <title>AR Business Card</title>
   </head>
   <body>
     <a-scene mindar-image="imageTargetSrc: ./targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       
       <a-assets>
-        <video id="vid" src="./video.mp4" loop="true" playsinline webkit-playsinline muted crossorigin="anonymous"></video>
+        <video id="vid" src="./video.mp4" autoplay="true" loop="true" playsinline webkit-playsinline muted crossorigin="anonymous"></video>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-      <a-entity mindar-image-target="targetIndex: 0">
-        <a-plane src="#vid" position="0 0 0" height="0.55" width="1" rotation="0 0 0"></a-plane>
+      <a-entity id="mytarget" mindar-image-target="targetIndex: 0">
+        <a-plane src="#vid" position="0 0 0" height="1" width="1" rotation="0 0 0"></a-plane>
       </a-entity>
     </a-scene>
+
+    <script>
+      // وقتی صفحه لود شد این کد اجرا میشه
+      document.addEventListener("DOMContentLoaded", function() {
+        const video = document.querySelector("#vid");
+        const target = document.querySelector("#mytarget");
+
+        // وقتی QR Code پیدا شد
+        target.addEventListener("targetFound", event => {
+          console.log("تارگت پیدا شد - پخش ویدیو");
+          video.play();
+        });
+
+        // وقتی QR Code گم شد (اختیاری: پوز کردن ویدیو)
+        target.addEventListener("targetLost", event => {
+          console.log("تارگت گم شد - توقف ویدیو");
+          video.pause();
+        });
+      });
+    </script>
   </body>
 </html>
