--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     
     <div id="loading-screen">
-      <div>در حال تنظیم دقیق مدل...</div>
+      <div>2در حال تنظیم دقیق مدل...</div>
     </div>
 
     <a-scene 
@@ -146,3 +146,4 @@
     </script>
   </body>
 </html>
+
