--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- وضعیت نمایش -->
-    <div id="status">محورها فیکس روی QR کد | نورپردازی داینامیک</div>
+    <div id="status">محورها فیکس روی QR 2کد | نورپردازی داینامیک</div>
 
     <a-scene 
       mindar-image="imageTargetSrc: ./targets.mind;" 
@@ -103,6 +103,7 @@
     </script>
   </body>
 </html>
+
 
 
 
