--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- وضعیت نمایش -->
-    <div id="status">محورها فیکس روی QR کد | نورپردازی داینامیک</div>
+    <div id="status">محورها فیکس روی QR 2کد | نورپردازی داینامیک</div>
 
     <a-scene 
       mindar-image="imageTargetSrc: ./targets.mind;" 
@@ -85,7 +85,7 @@
             <a-gltf-model 
               src="#avatarModel" 
               position="0 0 0" 
-              scale="0.001 0.001 0.001"> 
+              scale="0.1 0.1 0.1"> 
             </a-gltf-model>
 
         </a-entity>
@@ -103,6 +103,7 @@
     </script>
   </body>
 </html>
+
 
 
 
